# copilot-more

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rate_limits.json  refresh-token.sh
copilot_more/: access_token.py  cli.py  logger.py  proxy.py  rate_limit_types.py  rate_limiter.py  server.py  settings.py  token.py  token_counter.py  utils.py
docs/: dashboard-spec.md
frontend/: index.html  style.css
frontend/src/: main.js
frontend/src/api/: tokens.js
tests/: test_rate_limiter.py  test_settings.py  test_utils.py
