[tool.poetry]
name = "copilot-more"
version = "0.1.0"
description = ""
authors = ["Jijun Leng <962285+jjleng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
aiohttp = "^3.11.8"
mitmproxy = "^11.0.2"
pydantic-settings = "^2.8.1"
rich = "^13.9.4"
loguru = "^0.7.3"
cachetools = "^5.5.2"        # DO NOT remove
pystore = "^0.1.24"
typer = "^0.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^24.10.0"
isort = "^5.13.2"
pandas-stubs = "^2.2.3.241126"

[tool.poetry.scripts]
token-usage = "copilot_more.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
